objects/pse__Revenue_Forecast_Batch_Status__c.object
<CustomObject>
    <description>Stores the status of Revenue Forecasting batch Apex jobs.</description>
    <fields>
        <fullName>pse__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The opportunity relating to this batch status record.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Revenue Forecast Batch Status</relationshipLabel>
        <relationshipName>Revenue_Forecast_Batch_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Record_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Salesforce record ID of the record this batch status record relates to.</description>
        <inlineHelpText>The Salesforce record ID of the record this batch status record relates to.</inlineHelpText>
        <label>Record ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Revenue_Forecast_Batch_Update_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates when the related record is queued ready for revenue forecast processing. This is a system controlled field.</description>
        <inlineHelpText>Indicates when the related record is queued ready for revenue forecast processing. This is a system controlled field.</inlineHelpText>
        <label>Revenue Forecast Batch Update Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Revenue_Forecast_Last_Updated__c</fullName>
        <description>Date and time when this revenue forecast was last updated.</description>
        <inlineHelpText>Date and time when this revenue forecast was last updated.</inlineHelpText>
        <label>Revenue Forecast Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Revenue_Forecast_Processing_Status__c</fullName>
        <description>The processing status of this revenue forecast.</description>
        <inlineHelpText>The processing status of this revenue forecast.</inlineHelpText>
        <label>Revenue Forecast Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Revenue Forecast Batch Status</label>
    <nameField>
        <displayFormat>RFS-{00000000}</displayFormat>
        <label>Revenue Forecast Batch Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Forecast Batch Statuses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>